qt/quick/gen_qquickitem.h

class QMetaObject;
class QObject;
typedef QQuickItem::ItemChangeData QQuickItem__ItemChangeData;
typedef QQuickItem::UpdatePaintNodeData QQuickItem__UpdatePaintNodeData;
class QQuickTransform;
typedef struct QChildEvent QChildEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHoverEvent QHoverEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QObject QObject;
typedef struct QQuickItem QQuickItem;
typedef struct QQuickItem__ItemChangeData QQuickItem__ItemChangeData;
typedef struct QQuickItem__UpdatePaintNodeData QQuickItem__UpdatePaintNodeData;
typedef struct QQuickTransform QQuickTransform;
typedef struct QQuickWindow QQuickWindow;
typedef struct QRectF QRectF;
typedef struct QSGNode QSGNode;
typedef struct QSGTextureProvider QSGTextureProvider;
typedef struct QTimerEvent QTimerEvent;
typedef struct QTouchEvent QTouchEvent;
typedef struct QWheelEvent QWheelEvent;
bool QQuickItem_override_virtual_inputMethodQuery(void* self, intptr_t slot);
bool QQuickItem_override_virtual_isTextureProvider(void* self, intptr_t slot);
bool QQuickItem_virtualbase_isTextureProvider(const void* self);
bool QQuickItem_override_virtual_textureProvider(void* self, intptr_t slot);
QSGTextureProvider* QQuickItem_virtualbase_textureProvider(const void* self);
bool QQuickItem_override_virtual_event(void* self, intptr_t slot);
bool QQuickItem_virtualbase_event(void* self, QEvent* param1);
bool QQuickItem_override_virtual_itemChange(void* self, intptr_t slot);
void QQuickItem_virtualbase_itemChange(void* self, int param1, QQuickItem__ItemChangeData* param2);
bool QQuickItem_override_virtual_classBegin(void* self, intptr_t slot);
void QQuickItem_virtualbase_classBegin(void* self);
bool QQuickItem_override_virtual_componentComplete(void* self, intptr_t slot);
void QQuickItem_virtualbase_componentComplete(void* self);
bool QQuickItem_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QQuickItem_virtualbase_keyPressEvent(void* self, QKeyEvent* event);
bool QQuickItem_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QQuickItem_virtualbase_keyReleaseEvent(void* self, QKeyEvent* event);
bool QQuickItem_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QQuickItem_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* param1);
bool QQuickItem_override_virtual_focusInEvent(void* self, intptr_t slot);
void QQuickItem_virtualbase_focusInEvent(void* self, QFocusEvent* param1);
bool QQuickItem_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QQuickItem_virtualbase_focusOutEvent(void* self, QFocusEvent* param1);
bool QQuickItem_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QQuickItem_virtualbase_mousePressEvent(void* self, QMouseEvent* event);
bool QQuickItem_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QQuickItem_virtualbase_mouseMoveEvent(void* self, QMouseEvent* event);
bool QQuickItem_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QQuickItem_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* event);
bool QQuickItem_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QQuickItem_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* event);
bool QQuickItem_override_virtual_mouseUngrabEvent(void* self, intptr_t slot);
void QQuickItem_virtualbase_mouseUngrabEvent(void* self);
bool QQuickItem_override_virtual_touchUngrabEvent(void* self, intptr_t slot);
void QQuickItem_virtualbase_touchUngrabEvent(void* self);
bool QQuickItem_override_virtual_wheelEvent(void* self, intptr_t slot);
void QQuickItem_virtualbase_wheelEvent(void* self, QWheelEvent* event);
bool QQuickItem_override_virtual_touchEvent(void* self, intptr_t slot);
void QQuickItem_virtualbase_touchEvent(void* self, QTouchEvent* event);
bool QQuickItem_override_virtual_hoverEnterEvent(void* self, intptr_t slot);
void QQuickItem_virtualbase_hoverEnterEvent(void* self, QHoverEvent* event);
bool QQuickItem_override_virtual_hoverMoveEvent(void* self, intptr_t slot);
void QQuickItem_virtualbase_hoverMoveEvent(void* self, QHoverEvent* event);
bool QQuickItem_override_virtual_hoverLeaveEvent(void* self, intptr_t slot);
void QQuickItem_virtualbase_hoverLeaveEvent(void* self, QHoverEvent* event);
bool QQuickItem_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QQuickItem_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* param1);
bool QQuickItem_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QQuickItem_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* param1);
bool QQuickItem_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QQuickItem_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* param1);
bool QQuickItem_override_virtual_dropEvent(void* self, intptr_t slot);
void QQuickItem_virtualbase_dropEvent(void* self, QDropEvent* param1);
bool QQuickItem_override_virtual_childMouseEventFilter(void* self, intptr_t slot);
bool QQuickItem_virtualbase_childMouseEventFilter(void* self, QQuickItem* param1, QEvent* param2);
bool QQuickItem_override_virtual_windowDeactivateEvent(void* self, intptr_t slot);
void QQuickItem_virtualbase_windowDeactivateEvent(void* self);
bool QQuickItem_override_virtual_geometryChanged(void* self, intptr_t slot);
void QQuickItem_virtualbase_geometryChanged(void* self, QRectF* newGeometry, QRectF* oldGeometry);
bool QQuickItem_override_virtual_updatePaintNode(void* self, intptr_t slot);
QSGNode* QQuickItem_virtualbase_updatePaintNode(void* self, QSGNode* param1, QQuickItem__UpdatePaintNodeData* param2);
bool QQuickItem_override_virtual_releaseResources(void* self, intptr_t slot);
void QQuickItem_virtualbase_releaseResources(void* self);
bool QQuickItem_override_virtual_updatePolish(void* self, intptr_t slot);
void QQuickItem_virtualbase_updatePolish(void* self);
bool QQuickItem_override_virtual_eventFilter(void* self, intptr_t slot);
bool QQuickItem_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QQuickItem_override_virtual_timerEvent(void* self, intptr_t slot);
void QQuickItem_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QQuickItem_override_virtual_childEvent(void* self, intptr_t slot);
void QQuickItem_virtualbase_childEvent(void* self, QChildEvent* event);
bool QQuickItem_override_virtual_customEvent(void* self, intptr_t slot);
void QQuickItem_virtualbase_customEvent(void* self, QEvent* event);
bool QQuickItem_override_virtual_connectNotify(void* self, intptr_t slot);
void QQuickItem_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QQuickItem_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QQuickItem_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QQuickItem_delete(QQuickItem* self);
QQuickItem__ItemChangeData* QQuickItem__ItemChangeData_new(QQuickItem* v);
QQuickItem__ItemChangeData* QQuickItem__ItemChangeData_new2(QQuickWindow* v);
QQuickItem__ItemChangeData* QQuickItem__ItemChangeData_new3(double v);
QQuickItem__ItemChangeData* QQuickItem__ItemChangeData_new4(bool v);
void QQuickItem__ItemChangeData_delete(QQuickItem__ItemChangeData* self);
void QQuickItem__UpdatePaintNodeData_delete(QQuickItem__UpdatePaintNodeData* self);