qt/quick/gen_qquickitem.nim

proc fcQQuickItem_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_inputMethodQuery".}
proc fQQuickItem_virtualbase_isTextureProvider(self: pointer, ): bool{.importc: "QQuickItem_virtualbase_isTextureProvider".}
proc fcQQuickItem_override_virtual_isTextureProvider(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_isTextureProvider".}
proc fQQuickItem_virtualbase_textureProvider(self: pointer, ): pointer{.importc: "QQuickItem_virtualbase_textureProvider".}
proc fcQQuickItem_override_virtual_textureProvider(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_textureProvider".}
proc fQQuickItem_virtualbase_event(self: pointer, param1: pointer): bool{.importc: "QQuickItem_virtualbase_event".}
proc fcQQuickItem_override_virtual_event(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_event".}
proc fQQuickItem_virtualbase_itemChange(self: pointer, param1: cint, param2: pointer): void{.importc: "QQuickItem_virtualbase_itemChange".}
proc fcQQuickItem_override_virtual_itemChange(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_itemChange".}
proc fQQuickItem_virtualbase_classBegin(self: pointer, ): void{.importc: "QQuickItem_virtualbase_classBegin".}
proc fcQQuickItem_override_virtual_classBegin(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_classBegin".}
proc fQQuickItem_virtualbase_componentComplete(self: pointer, ): void{.importc: "QQuickItem_virtualbase_componentComplete".}
proc fcQQuickItem_override_virtual_componentComplete(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_componentComplete".}
proc fQQuickItem_virtualbase_keyPressEvent(self: pointer, event: pointer): void{.importc: "QQuickItem_virtualbase_keyPressEvent".}
proc fcQQuickItem_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_keyPressEvent".}
proc fQQuickItem_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QQuickItem_virtualbase_keyReleaseEvent".}
proc fcQQuickItem_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_keyReleaseEvent".}
proc fQQuickItem_virtualbase_inputMethodEvent(self: pointer, param1: pointer): void{.importc: "QQuickItem_virtualbase_inputMethodEvent".}
proc fcQQuickItem_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_inputMethodEvent".}
proc fQQuickItem_virtualbase_focusInEvent(self: pointer, param1: pointer): void{.importc: "QQuickItem_virtualbase_focusInEvent".}
proc fcQQuickItem_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_focusInEvent".}
proc fQQuickItem_virtualbase_focusOutEvent(self: pointer, param1: pointer): void{.importc: "QQuickItem_virtualbase_focusOutEvent".}
proc fcQQuickItem_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_focusOutEvent".}
proc fQQuickItem_virtualbase_mousePressEvent(self: pointer, event: pointer): void{.importc: "QQuickItem_virtualbase_mousePressEvent".}
proc fcQQuickItem_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_mousePressEvent".}
proc fQQuickItem_virtualbase_mouseMoveEvent(self: pointer, event: pointer): void{.importc: "QQuickItem_virtualbase_mouseMoveEvent".}
proc fcQQuickItem_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_mouseMoveEvent".}
proc fQQuickItem_virtualbase_mouseReleaseEvent(self: pointer, event: pointer): void{.importc: "QQuickItem_virtualbase_mouseReleaseEvent".}
proc fcQQuickItem_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_mouseReleaseEvent".}
proc fQQuickItem_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void{.importc: "QQuickItem_virtualbase_mouseDoubleClickEvent".}
proc fcQQuickItem_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_mouseDoubleClickEvent".}
proc fQQuickItem_virtualbase_mouseUngrabEvent(self: pointer, ): void{.importc: "QQuickItem_virtualbase_mouseUngrabEvent".}
proc fcQQuickItem_override_virtual_mouseUngrabEvent(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_mouseUngrabEvent".}
proc fQQuickItem_virtualbase_touchUngrabEvent(self: pointer, ): void{.importc: "QQuickItem_virtualbase_touchUngrabEvent".}
proc fcQQuickItem_override_virtual_touchUngrabEvent(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_touchUngrabEvent".}
proc fQQuickItem_virtualbase_wheelEvent(self: pointer, event: pointer): void{.importc: "QQuickItem_virtualbase_wheelEvent".}
proc fcQQuickItem_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_wheelEvent".}
proc fQQuickItem_virtualbase_touchEvent(self: pointer, event: pointer): void{.importc: "QQuickItem_virtualbase_touchEvent".}
proc fcQQuickItem_override_virtual_touchEvent(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_touchEvent".}
proc fQQuickItem_virtualbase_hoverEnterEvent(self: pointer, event: pointer): void{.importc: "QQuickItem_virtualbase_hoverEnterEvent".}
proc fcQQuickItem_override_virtual_hoverEnterEvent(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_hoverEnterEvent".}
proc fQQuickItem_virtualbase_hoverMoveEvent(self: pointer, event: pointer): void{.importc: "QQuickItem_virtualbase_hoverMoveEvent".}
proc fcQQuickItem_override_virtual_hoverMoveEvent(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_hoverMoveEvent".}
proc fQQuickItem_virtualbase_hoverLeaveEvent(self: pointer, event: pointer): void{.importc: "QQuickItem_virtualbase_hoverLeaveEvent".}
proc fcQQuickItem_override_virtual_hoverLeaveEvent(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_hoverLeaveEvent".}
proc fQQuickItem_virtualbase_dragEnterEvent(self: pointer, param1: pointer): void{.importc: "QQuickItem_virtualbase_dragEnterEvent".}
proc fcQQuickItem_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_dragEnterEvent".}
proc fQQuickItem_virtualbase_dragMoveEvent(self: pointer, param1: pointer): void{.importc: "QQuickItem_virtualbase_dragMoveEvent".}
proc fcQQuickItem_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_dragMoveEvent".}
proc fQQuickItem_virtualbase_dragLeaveEvent(self: pointer, param1: pointer): void{.importc: "QQuickItem_virtualbase_dragLeaveEvent".}
proc fcQQuickItem_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_dragLeaveEvent".}
proc fQQuickItem_virtualbase_dropEvent(self: pointer, param1: pointer): void{.importc: "QQuickItem_virtualbase_dropEvent".}
proc fcQQuickItem_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_dropEvent".}
proc fQQuickItem_virtualbase_childMouseEventFilter(self: pointer, param1: pointer, param2: pointer): bool{.importc: "QQuickItem_virtualbase_childMouseEventFilter".}
proc fcQQuickItem_override_virtual_childMouseEventFilter(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_childMouseEventFilter".}
proc fQQuickItem_virtualbase_windowDeactivateEvent(self: pointer, ): void{.importc: "QQuickItem_virtualbase_windowDeactivateEvent".}
proc fcQQuickItem_override_virtual_windowDeactivateEvent(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_windowDeactivateEvent".}
proc fQQuickItem_virtualbase_geometryChanged(self: pointer, newGeometry: pointer, oldGeometry: pointer): void{.importc: "QQuickItem_virtualbase_geometryChanged".}
proc fcQQuickItem_override_virtual_geometryChanged(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_geometryChanged".}
proc fQQuickItem_virtualbase_updatePaintNode(self: pointer, param1: pointer, param2: pointer): pointer{.importc: "QQuickItem_virtualbase_updatePaintNode".}
proc fcQQuickItem_override_virtual_updatePaintNode(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_updatePaintNode".}
proc fQQuickItem_virtualbase_releaseResources(self: pointer, ): void{.importc: "QQuickItem_virtualbase_releaseResources".}
proc fcQQuickItem_override_virtual_releaseResources(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_releaseResources".}
proc fQQuickItem_virtualbase_updatePolish(self: pointer, ): void{.importc: "QQuickItem_virtualbase_updatePolish".}
proc fcQQuickItem_override_virtual_updatePolish(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_updatePolish".}
proc fQQuickItem_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QQuickItem_virtualbase_eventFilter".}
proc fcQQuickItem_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_eventFilter".}
proc fQQuickItem_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QQuickItem_virtualbase_timerEvent".}
proc fcQQuickItem_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_timerEvent".}
proc fQQuickItem_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QQuickItem_virtualbase_childEvent".}
proc fcQQuickItem_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_childEvent".}
proc fQQuickItem_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QQuickItem_virtualbase_customEvent".}
proc fcQQuickItem_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_customEvent".}
proc fQQuickItem_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QQuickItem_virtualbase_connectNotify".}
proc fcQQuickItem_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_connectNotify".}
proc fQQuickItem_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QQuickItem_virtualbase_disconnectNotify".}
proc fcQQuickItem_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QQuickItem_override_virtual_disconnectNotify".}
proc fcQQuickItem_delete(self: pointer) {.importc: "QQuickItem_delete".}
proc fcQQuickItemItemChangeData_new(v: pointer): ptr cQQuickItemItemChangeData {.importc: "QQuickItem__ItemChangeData_new".}
proc fcQQuickItemItemChangeData_new2(v: pointer): ptr cQQuickItemItemChangeData {.importc: "QQuickItem__ItemChangeData_new2".}
proc fcQQuickItemItemChangeData_new3(v: float64): ptr cQQuickItemItemChangeData {.importc: "QQuickItem__ItemChangeData_new3".}
proc fcQQuickItemItemChangeData_new4(v: bool): ptr cQQuickItemItemChangeData {.importc: "QQuickItem__ItemChangeData_new4".}
proc fcQQuickItemItemChangeData_delete(self: pointer) {.importc: "QQuickItem__ItemChangeData_delete".}
proc fcQQuickItemUpdatePaintNodeData_delete(self: pointer) {.importc: "QQuickItem__UpdatePaintNodeData_delete".}


func init*(T: type QQuickTransform, h: ptr cQQuickTransform): QQuickTransform =
  T(h: h)
proc create*(T: type QQuickTransform, ): QQuickTransform =

  QQuickTransform.init(fcQQuickTransform_new())
proc create*(T: type QQuickTransform, parent: gen_qobject.QObject): QQuickTransform =

  QQuickTransform.init(fcQQuickTransform_new2(parent.h))
proc metaObject*(self: QQuickTransform, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQQuickTransform_metaObject(self.h))

proc metacast*(self: QQuickTransform, param1: cstring): pointer =

  fcQQuickTransform_metacast(self.h, param1)

proc metacall*(self: QQuickTransform, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQQuickTransform_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QQuickTransform, s: cstring): string =
